gap fix

--- a/styles/layout-opt.css
+++ b/styles/layout-opt.css
@@ -268,6 +268,8 @@ textarea:focus-visible {
   align-items: center;
 }
 
+.library-topbar-start {padding-left: var(--gap)}
+
 .reader-main-toolbar-end,
 .reader-context-toolbar-end {
   flex: 0 0 auto;
